# ytrag

./: README.md
ytrag/: .gitignore  app.py  pyproject.toml  requirements.txt
ytrag/faiss_store/: faiss.index  metadata.pkl
ytrag/notebook/: document.ipynb  pdf_loader.ipynb
ytrag/src/: data_loader.py  embedding.py  search.py  vectorstore.py
